--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Saaiph\\Router\\": "src/",
-            "Saaiph\\Router\\Method\\": "src/Method/"
+            "Saaiph\\Router\\": "src/"
         }
     }
 }
